# project-grapgh

./: .dockerignore  .env.example  .gitignore  Dockerfile  GRAPH_FREEZE_FIX.md  README.md  default.conf  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  Проект_ТЗ_видеофиксация_проката_в3_2406.html
backend/: .dockerignore  Dockerfile  README.md
backend/app/: .dockerignore  dockerfile.competency_graph  main.py  pyproject.toml
backend/app/api/v1/: __init__.py  auth.py  comments.py  competencies.py  users.py
backend/app/dao/: competency_dao.py  init-repository.sh  user_dao.py  version_dao.py
backend/app/db/: migrate.py
backend/app/db/migrations/: 0001_init.sql  0002_add_author_to_node_version.sql
backend/app/dependencies/: __init__.py  auth.py  config.py  redis.py
backend/app/middlewares/: auth.py
backend/app/models/: __init__.py  comments.py  graph.py
backend/app/services/: auth.py
frontend/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: input.json
frontend/src/: main.tsx
frontend/src/app/: App.module.css  App.tsx
public/: example.ttl  input — копия.json  input.json
src/: Graph.tsx  main.tsx
src/app/: App.module.css  App.tsx
src/app/providers/: AuthProvider.tsx  ProtectedRoute.tsx  index.ts
src/features/FileHTMLToString/: FileHTMLToString.tsx
src/features/auth/: index.ts
src/pages/: index.ts
src/pages/GraphPage/: AddNodeMenu.tsx  ControlMenu.tsx  Graph.tsx  (+8 more)
src/services/: rdfGraphBuilder.ts  rdfParser.ts
(+69 files in other folders)
